restore and mutate functions in components

--- a/src/app/one/first/first.component.html
+++ b/src/app/one/first/first.component.html
@@ -3,4 +3,4 @@
 </p>
 
 <button (click)="goBack()">Go Back</button>
-<button (click)="goNext()">Go Next</button>
+<button (click)="goNext()">Go Next</button> {{ data | json }}
