--- a/src/app/one/second/second.component.html
+++ b/src/app/one/second/second.component.html
@@ -3,4 +3,4 @@
 </p>
 
 <button (click)="goBack()">Go Back</button>
-<button (click)="goNext()">Go Next</button>{{data?.name}}
+<button (click)="goNext()">Go Next</button>{{data | json}}
